fix: fixed scroll and removed white space

--- a/packages/core/src/sass/app/_common/components/account-common.scss
+++ b/packages/core/src/sass/app/_common/components/account-common.scss
@@ -36,6 +36,7 @@
     @include mobile-or-tablet-screen {
         padding: 1.6rem;
         height: 100%;
+        overflow-y: scroll;
 
         & .onfido-sdk-ui-PageTitle {
             &-titleWrapper {
